deploy/k8s_deploy/nginx_deploy.yaml

---
# kubectl create configmap nginx-configmap --from-file nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: liangdu
spec:
  ports:
  - port: 80
  selector:
    app: nginx
  clusterIP: None

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: liangdu
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "z-gour.com"
      containers:
      - name: nginx
        image: nginx:1.19.6
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-persistent-storage
          mountPath: /etc/nginx/conf.d
          #readOnly: true
          #subPath: nginx.conf
        
        - name: website-persistent-storage
          mountPath: /etc/letsencrypt/live/
      volumes:
      - name: nginx-persistent-storage
        configMap:
          name: nginx-config
      - name: website-persistent-storage
        persistentVolumeClaim:
          claimName: nginx-pv-claim
