deploy/k8s_deploy/website_deploy.yaml

---
# kubectl create configmap nginx-configmap --from-file nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: liangdu
spec:
  ports:
  - port: 80
  selector:
    app: website
    #  clusterIP: None

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: website-deployment
  namespace: liangdu
spec:
  selector:
    matchLabels:
      app: website
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: website
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "z-gour.com"
      containers:
      - name: website
        image: z-gour.com/perch/website:320673c
        ports:
        - containerPort: 80
